--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://zordan.github.io/portfloio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,13 +12,15 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0",
     "react-i18next": "^12.1.4",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "nom run build",
+    "deploy": "gh-pages -d build",
     "dev": "concurrently \"npm start\" \"npm run start-server\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "json-server": "^0.17.1"
+    "json-server": "^0.17.1",
+    "gh-pages": "^5.0.0"
   }
 }
